# tts-gateway

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.agents/: LEARNINGS.md
.github/workflows/: ci.yml  publish-docker.yml  release.yml
goals/tts-streaming-latency/: benchmarking.md  cosyvoice-sidecar.md  facts-result.json  facts-review.json  facts.md  facts.meta.json  goal.md  interview-result.json  interview.json  plan.md
goals/tts-streaming-latency/benchmarks/: cosyvoice-bridge-contract-smoke.json  cosyvoice3-zero-shot-m1-sentence.json  cosyvoice3-zero-shot-m1-short.json  kokoro-baseline.json  kokoro-current-engine-metadata.json  stream-transport-comparison.json
goals/tts-streaming-latency/composer-prompts/: phase-1-benchmark.md  phase-10-cosyvoice-official-modes.md  phase-11-cosyvoice-local-sidecar.md  phase-12-listening-review-assets.md  phase-13-listening-verdict-capture.md  phase-14-goal-artifact-verifier.md  phase-15-thermonuclear-gateway-review.md  phase-16-review-fixes-gateway-cosyvoice.md  phase-2-raycast-streaming.md  phase-3-stream-first-chunk.md  phase-4-gateway-pcm-transport.md  phase-4-raycast-pcm-playback.md  phase-5-streaming-engine-interface.md  phase-6-cosyvoice-sidecar.md  (+3 more)
scripts/: __init__.py  _gateway_http.py  apply_listening_verdict.py  bench_latency.py  check_stream_transport.py  cosyvoice_defaults.py  cosyvoice_local_sidecar.py  cosyvoice_official_bridge.py  healthcheck.py  manual_stream_listening.py  preload_models.py  release.py  test_api.py  verify_goal_artifacts.py
tests/: conftest.py  test_api_integration.py  test_apply_listening_verdict.py  test_bench_latency.py  test_check_stream_transport.py  test_chunking.py  test_config.py  test_cosyvoice_local_sidecar.py  test_cosyvoice_official_bridge.py  test_cosyvoice_sidecar.py  test_gateway_dual_mode.py  test_kokoro_native.py  test_main.py  test_manual_stream_listening.py  test_native_engine.py  test_runtime.py  test_store.py  test_synthesis.py  test_verify_goal_artifacts.py  test_worker.py
tts_gateway/: __init__.py  audio.py  chunking.py  cli.py  config.py  gateway.py  main.py  render.py  routes.py  runtime.py  synthesis.py  types.py
tts_gateway/engines/: __init__.py  base.py  cosyvoice_sidecar.py  kokoro_native.py  native_engine.py  pocket_native.py
tts_gateway/jobs/: __init__.py  store.py  worker.py
(+4 files in other folders)
