[project]
name = "tts-gateway"
version = "1.0.0"
description = "Multi-provider TTS gateway server with engine fallback, text chunking, and audio stitching"
license = "MIT"
authors = [{ name = "Andy Pai" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.116,<0.117",
    "httpx>=0.28,<0.29",
    "python-multipart>=0.0.21,<0.1",
    "uvicorn[standard]>=0.35,<0.36",
    "numpy>=1.24,<3",
    "soundfile>=0.12,<1",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
kokoro = ["kokoro>=0.9", "torch>=2.10,<2.11"]
pocket = ["pocket-tts>=0.1", "torch>=2.10,<2.11"]
all = ["kokoro>=0.9", "pocket-tts>=0.1", "torch>=2.10,<2.11"]

[project.urls]
Repository = "https://github.com/abpai/tts-gateway"

[project.scripts]
tts = "tts_gateway.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
]
ignore = ["E501", "B008", "C901", "N812", "N803", "N806"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--cov=tts_gateway", "--cov-report=term-missing", "--cov-fail-under=50"]
asyncio_mode = "auto"

[tool.ty]

[tool.ty.environment]
python = ".venv"
python-version = "3.13"

[tool.ty.src]
include = ["tts_gateway", "tests"]
exclude = ["**/__pycache__", "*.pyc"]
respect-ignore-files = true

[tool.ty.rules]
possibly-unresolved-reference = "error"
division-by-zero = "error"

[tool.ty.terminal]
output-format = "concise"

[tool.coverage.run]
branch = true
source = ["tts_gateway"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
